# GraphColoringQ1

./: CMakeLists.txt  README.md
s277505GraphColoring/: CMakeLists.txt  main.cpp
s277505GraphColoring/Benchmark/: Benchmark.cpp  Benchmark.h
s277505GraphColoring/ColoringMethods/: Greedy.cpp  Greedy.h  Jones.cpp  Jones.h  LDF.cpp  LDF.h  Luby.cpp  Luby.h  SDL.cpp  SDL.h  Solver.h
s277505GraphColoring/Graph/: Graph.cpp  Graph.h
s277505GraphColoring/Parser/: DimacsP.cpp  DimacsP.h
s277505GraphColoring/Utility/: ProdConsV.h  Splitter.h
